Fixes chat nav icon spacing. #18

--- a/public/default.css
+++ b/public/default.css
@@ -6,3 +6,5 @@
 .red { color: red; }
 
 .brand { width: 30vh; }
+
+.top-icon { padding-right: 1em; }
